# project-rules-generator

./: .clinerules  .clinerules.yaml  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI-SKILL-QUALITY.md  AMIT_CODING_PREFERENCES.md  ARCHITECTURE.md  BUG_REPORT.md  CHANGELOG.md  CHANGES_TRACKER.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_JULES.md  COMMANDS.md  CONTRIBUTING.md  COWORK_CASCADE.md  COWORK_RULES_CREATOR.md  COWORK_SKILL_CREATOR.md  CR.md  CRITIQUE.md  Claude_prompt.md  Comprehensive Code Review_ Project Rules Generator.md  Comprehensive_Code_Review.md  DESIGN.md  E2E-RESULTS.md  GOVERNANCE.md  ISSUE_18.md  ISSUE_24.md  LEFTOVERS.md  LICENSE  ListOfbugs.md  MAINTAINERS.md  MANIFEST.in  PLAN.md  PRG_FULL_REVIEW_REPORT_V1_3.md  PRG_SKILL_SIMULATION.md  (+44 more)
.agent/skills/: SKILL.md
.agent/workflows/: generate-project-docs.md
.agents/rules/: project-rules-generator.md
.claude/: settings.local.json
.clinerules/: .gitignore  .prg-cache.json  README.md  auto-triggers.json  clinerules.yaml  constitution.md  rules.json  rules.md
.clinerules/skills/: index.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  (+3 more)
agent/: agent_executor.py
analyzer/: __init__.py  llm_analyzer.py  needs.py  project_type_detector.py  readme_parser.py  triggers.py  validator.py
bugs_docs/: CONSULTATED_ISSUES_30_31_32.md  CR0104.md  CR_April01.md  Comprehensive_CR_april.md  ISSUE_24.md  ISSUE_26.md  ISSUE_27.md  KNOWN-ISSUES.md  PRG_ANTHROPIC_SKILLS_GAP.md  PRG_CR_REPORT_67CE7F4.md  PRG_FULL_REVIEW_REPORT.md  PR_39_BUGS.md  PR_44_BUGS.md  analysis_report.md  audit_report.md  code-review-architecture-and-coupling.md  generator-code-review.md  intructions.md  issue-29.md  issue_23_skills_mechanism_review.md  planning-code-review.md  rca-7-to-8-5-roadmap.md  skill_creation_error_report.md  terminal_session_logs.md  🚀 Project Rules Generator_ Comprehensive Code Review & Critical Assessment.md
cli/: _version.py  agent.py  agent_plan_helpers.py  analyze_cmd.py  analyze_helpers.py  analyze_pipeline.py  analyze_quality.py  analyze_readme.py  autopilot_cmd.py  cli.py  cmd_design.py  cmd_plan.py  cmd_review.py  create_rules_cmd.py  feature_cmd.py  gaps_cmd.py  init_cmd.py  jobs.py  manager_cmd.py  migrate_standard.py  profile_shadow.py  providers_cmd.py  quality_cmd.py  ralph_cmd.py  safe_migrate.py  skill_pipeline.py  skills_cmd.py  tasks_cmd.py  utils.py  verify_cmd.py  watch_cmd.py
core/: __init__.py  ralph.py
docs/: ARCHITECTURE-overview.md  ARCHITECTURE_IMPROVEMENTS.md  AUDIT-FINDINGS.md  AUTHORING-SKILLS.md  BEST_PRACTICES.md  COMMANDS.md  CR-3-clean-pass.md  ClaudeCR.md  DESIGN-analyze-cmd-refactor.md  DESIGN-code-review-fixes.md  DESIGN-skill-creator-refactor.md  KNOWN-ISSUES.md  NEXT-LEVEL-STRATEGY.md  OpenSourcePlan.md  OpikIntegration.md  PLAN-analyze-cmd-refactor.md  PLAN-code-review-fixes.md  PRE-OSS-AUDIT.md  RalphLoop.md  RalphRoadmap.md  SKILL-USAGE-ANALYSIS.md  WATCH-MODE-ANALYSIS.md  agent-prompt.md  agent_integration_guide.md  architecture.md  autopilot-architecture.md  cli.md  configuration.md  features.md  index.md  llm-router.md  plan-and-design.md  project_plan.md  quick-start.md  ralph.md  rules-architecture.md  skills.md  structure.md  tips.md  updateClaudeCR.md  (+2 more)
generator/: __init__.py  base_generator.py  cascade_orchestrator.py  config.py  constitution_generator.py  content_analyzer.py  design_generator.py  exceptions.py  importers.py  incremental_analyzer.py  interactive.py  llm_skill_generator.py  module.yaml  orchestrator.py  pack_manager.py  project_analyzer.py  project_profile.py  quality_loop.py  quality_validators.py  ralph_engine.py  readme_generator.py  renderers.py  requirements.py  rules_creator.py  rules_generator.py  rules_git_miner.py  rules_manager.py  rules_renderer.py  rules_sections.py  skill_constants.py  skill_content_renderer.py  skill_creator.py  skill_discovery.py  skill_doc_loader.py  skill_generator.py  skill_matcher.py  skill_metadata_builder.py  skill_parser.py  skill_project_scanner.py  skill_tag_resolver.py  (+11 more)
multi-agent-system/: DESIGN.md  PLAN.md  README.md
prg_utils/: __init__.py  config_schema.py  exceptions.py  file_ops.py  git_ops.py  logger.py
refactor/: agent.py  analyze_cmd.py  autopilot_cmd.py  cascade_cmd.py  cli.py  config_cmd.py  create_rules_cmd.py  create_skills_cmd.py  gaps_cmd.py  jobs.py  manager_cmd.py  migrate_standard.py  safe_migrate.py  tasks_cmd.py
skills/: README.md
src/: config.py
tasks/: TASKS.yaml  task001-research-and-plan-approach.py  task002-implement-core-changes.py  task003-write-tests.py  task004-update-documentation.py  task005-verify-and-clean-up.py
temp_test_project/: README.md  requirements.txt
templates/: README.md  RULES.md  RULES.md.jinja2  SKILL.md  SKILL.md.jinja2  SPEC.short.md  TASK.md  TASK.short.md  TEMPLATE-GUIDE.md  rules_template.yaml  skills_template.yaml
tests/: __init__.py  conftest.py  test_agent_workflow.py  test_ai_router.py  test_ai_skill_generation.py  test_ai_video_detection.py  test_analyze_cmd_characterization.py  test_analyze_helpers.py  test_auto_generate_skills.py  test_autopilot_flow.py  test_bug_regressions.py  test_bug_report_ai_flag.py  test_builtin_skill_quality_gates.py  test_builtin_skills_integrity.py  test_claude_cr_fixes.py  test_cli.py  test_config_schema.py  test_conflict_resolution.py  test_constitution_generator.py  test_content_analyzer.py  test_context_optimization.py  test_cov_agent_cmd.py  test_cov_agent_plan_helpers.py  test_cov_analyze_quality.py  test_cov_cmd_review.py  test_cov_content_renderer.py  test_cov_cowork_strategy.py  test_cov_create_rules_cmd.py  test_cov_git_ops.py  test_cov_git_requirements.py  test_cov_jobs.py  test_cov_migrate.py  test_cov_project_manager.py  test_cov_project_planner.py  test_cov_providers_cmd.py  test_cov_pure_logic.py  test_cov_rules_creator.py  test_cov_scanner.py  test_cov_skill_metadata.py  test_cov_skill_parser.py  (+89 more)
utils/: __init__.py  exceptions.py  file_ops.py
verified_project/: README.md  requirements.txt
(+397 files in other folders)
