[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-rules-generator"
version = "0.1.0"
description = "A standard for defining project rules and skills for AI agents."
authors = [
  { name = "Amitro123", email = "amitro123@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ai", "agents", "rules", "skills", "scaffolding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "pathspec>=0.11.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0"
]

[project.scripts]
project-rules-generator = "main:cli"
prg = "main:cli"

[tool.setuptools]
py-modules = ["main", "project_rules_generator"]
packages = ["generator", "prg_utils", "cli"]

[tool.setuptools.package-data]
generator = ["skills/**/*"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
exclude = [
    "generator/templates/*",
    ".clinerules/*",
    ".claude/*",
    "tests/*",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401", "E501"]

[tool.black]
line_length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.claude
    | \.clinerules
    | \.git
    | \.venv
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | __pycache__
    | generator/templates
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [
    ".claude",
    ".clinerules",
    ".venv",
    "generator/templates",
    "build",
    "dist"
]
