[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-rules-generator"
version = "0.3.0"
description = "A standard for defining project rules and skills for AI agents."
authors = [
  { name = "Amitro123", email = "amitrosen4@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ai", "agents", "rules", "skills", "scaffolding", "claude", "cursor", "windsurf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "pathspec>=0.11.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "gitpython>=3.1.0",
    "watchdog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Amitro123/project-rules-generator"
Repository = "https://github.com/Amitro123/project-rules-generator"
Changelog = "https://github.com/Amitro123/project-rules-generator/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Amitro123/project-rules-generator/issues"

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8.6", "google-genai>=0.2.0"]
groq = ["groq>=0.4.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
llm = [
    "google-generativeai>=0.8.6",
    "google-genai>=0.2.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
opik = ["opik>=0.1.0"]
all = [
    "google-generativeai>=0.8.6",
    "google-genai>=0.2.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "opik>=0.1.0",
]

[project.scripts]
project-rules-generator = "cli.cli:main"
prg = "cli.cli:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["generator", "prg_utils", "cli"]

[tool.setuptools.package-data]
generator = ["skills/**/*", "templates/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
exclude = [
    "generator/templates/*",
    ".clinerules/*",
    ".claude/*",
    "tests/*",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401", "E501"]

[tool.ruff.lint.per-file-ignores]
# cli.py defers sub-command imports until after @cli group is defined to
# avoid circular imports; E402 is intentional here.
"cli/cli.py" = ["E402"]

[tool.black]
line_length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.claude
    | \.clinerules
    | \.git
    | \.venv
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | __pycache__
    | generator/templates
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.8"
# All third-party stubs are missing; use per-module overrides instead of a
# global --ignore-missing-imports flag so we catch errors in our own code.
ignore_missing_imports = false
follow_imports = "skip"
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false

# Third-party packages with no stubs — silence at the module level only
[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "click.*",
    "rich.*",
    "tqdm.*",
    "pydantic.*",
    "dotenv.*",
    "jinja2.*",
    "git.*",
    "pathspec.*",
    "google.*",
    "groq.*",
    "openai.*",
    "anthropic.*",
    "opik.*",
    "litellm.*",
    "tomllib",
    "tomli",
]
ignore_missing_imports = true


[tool.isort]
profile = "black"
line_length = 120
skip = [
    ".claude",
    ".clinerules",
    ".venv",
    "generator/templates",
    "build",
    "dist"
]
